; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-common/net/extr_net_socket.c_socket_create.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-common/net/extr_net_socket.c_socket_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SOCK_DGRAM = common dso_local global i32 0, align 4
@SOCK_STREAM = common dso_local global i32 0, align 4
@IPPROTO_TCP = common dso_local global i32 0, align 4
@IPPROTO_UDP = common dso_local global i32 0, align 4
@SCE_NET_IPPROTO_TCP = common dso_local global i32 0, align 4
@SCE_NET_IPPROTO_UDP = common dso_local global i32 0, align 4
@SCE_NET_SOCK_DGRAM = common dso_local global i32 0, align 4
@SCE_NET_SOCK_STREAM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @socket_create(i8* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  store i32 0, i32* %9, align 4
  store i32 0, i32* %10, align 4
  %12 = load i32, i32* %6, align 4
  %13 = call i32 @domain_get(i32 %12)
  store i32 %13, i32* %11, align 4
  %14 = load i32, i32* %7, align 4
  switch i32 %14, label %20 [
    i32 130, label %15
    i32 128, label %17
    i32 129, label %19
  ]

15:                                               ; preds = %4
  %16 = load i32, i32* @SOCK_DGRAM, align 4
  store i32 %16, i32* %9, align 4
  br label %20

17:                                               ; preds = %4
  %18 = load i32, i32* @SOCK_STREAM, align 4
  store i32 %18, i32* %9, align 4
  br label %20

19:                                               ; preds = %4
  br label %20

20:                                               ; preds = %4, %19, %17, %15
  %21 = load i32, i32* %8, align 4
  switch i32 %21, label %27 [
    i32 133, label %22
    i32 132, label %23
    i32 131, label %25
  ]

22:                                               ; preds = %20
  store i32 0, i32* %10, align 4
  br label %27

23:                                               ; preds = %20
  %24 = load i32, i32* @IPPROTO_TCP, align 4
  store i32 %24, i32* %10, align 4
  br label %27

25:                                               ; preds = %20
  %26 = load i32, i32* @IPPROTO_UDP, align 4
  store i32 %26, i32* %10, align 4
  br label %27

27:                                               ; preds = %20, %25, %23, %22
  %28 = load i32, i32* %11, align 4
  %29 = load i32, i32* %9, align 4
  %30 = load i32, i32* %10, align 4
  %31 = call i32 @socket(i32 %28, i32 %29, i32 %30)
  ret i32 %31
}

declare dso_local i32 @domain_get(i32) #1

declare dso_local i32 @socket(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
